Add introduction and images to ML LaTeX source
Introduced a comprehensive 'Introduction' chapter to MachineLearning.tex, covering the definition and types of machine learning problems, and added supporting images (Checkers, classifier, regression, and design choice diagrams). Updated the preamble to include algorithm packages, added a new theorem environment, and extended spell-check settings. ArtificialIntelligence.tex had its introduction removed, and preamble.tex was updated accordingly.

--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -26,6 +26,7 @@
 \usepackage{psvectorian,lipsum}
 \usepackage{fourier-orns}
 \usepackage{lipsum}
+\usepackage{wrapfig}
 \usepackage{multicol}
 \usepackage[paper=a4paper,left=25mm,right=25mm,bottom=25mm,top=25mm]{geometry}
 \definecolor{light-gray}{gray}{0.95}
