--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -80,7 +80,9 @@
 \newcommand{\rid}{{\le_m^P}}
 \newcommand{\Z}{{\mathbb Z}}
 \newcommand{\blank}{{\sqcup}}
+\newcommand{\Prob}{{\mathbb P}}
 \newcommand{\R}{{\mathbb R}}
+\newcommand{\VA}{{\mathbb E}}
 \newcommand{\N}{{\mathbb N}}
 \newcommand{\quat}{{\mathbb H}}
 \newcommand{\C}{{\mathbb C}}
