--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -83,6 +83,8 @@
 \newcommand{\Prob}{{\mathbb P}}
 \newcommand{\R}{{\mathbb R}}
 \newcommand{\VA}{{\mathbb E}}
+\newcommand{\btheta}{{\boldsymbol{\theta}}}
+\newcommand{\bomega}{{\boldsymbol{\omega}}}
 \newcommand{\N}{{\mathbb N}}
 \newcommand{\quat}{{\mathbb H}}
 \newcommand{\C}{{\mathbb C}}
